fixed overflow issue

--- a/src/components/contentProductDesc/contentBody/productDesc/context/Context.module.css
+++ b/src/components/contentProductDesc/contentBody/productDesc/context/Context.module.css
@@ -29,6 +29,10 @@
 .listContainer {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.7fr 1fr;
   min-width: fit-content;
+}
+.listTitle {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
